# python-generator

./: .gitignore  01_get_repos.py  02.clean_non_python_files.py  pyproject.toml
tests/: test_python_generator.py
